# yolo_ros

./: CMakeLists.txt  best.pt  mqtt_bridge_config.yaml  package.xml  requirements.txt  setup.py  test.py
config/camera_calibration/: c2b.json  c2f.json  robot_poses2.json  wp2camera.json
launch/: detection.launch
msg/: DetectedObject.msg  DetectedState.msg
nodes/: detection  fake_image_pub  virtual_camera
